deploy: 02d7b1d9b7e17456270ecc9c3f5bd0ec62a8b427

--- a/blog.html
+++ b/blog.html
@@ -162,7 +162,7 @@ window.Quarto = {
   <li class="nav-item">
     <a class="nav-link" href="https://jinsaekiko.substack.com/" target="_blank"> <i class="bi bi-box-arrow-up-right" role="img">
 </i> 
-<span class="menu-text">Substack</span></a>
+<span class="menu-text">Writings</span></a>
   </li>  
 </ul>
           </div> <!-- /navcollapse -->
@@ -248,7 +248,7 @@ Reading Time
 </thead>
 <tbody class="list">
 
-<tr data-index="0" data-categories="Q1M=" data-listing-date-sort="1755734400000" data-listing-file-modified-sort="1764664562004" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="317" data-listing-title-sort="How this Website was Made" data-listing-filename-sort="blog_post.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="0" data-categories="Q1M=" data-listing-date-sort="1755734400000" data-listing-file-modified-sort="1764664841563" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="317" data-listing-title-sort="How this Website was Made" data-listing-filename-sort="blog_post.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-08-21</span>
@@ -262,7 +262,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="1" data-categories="QmlvbG9neQ==" data-listing-date-sort="1756425600000" data-listing-file-modified-sort="1764664562004" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="920" data-listing-title-sort="Overview Of Sequencing" data-listing-filename-sort="08-29-25.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="1" data-categories="QmlvbG9neQ==" data-listing-date-sort="1756425600000" data-listing-file-modified-sort="1764664841563" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="920" data-listing-title-sort="Overview Of Sequencing" data-listing-filename-sort="08-29-25.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-08-29</span>
@@ -276,7 +276,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="2" data-categories="TWlzYw==" data-listing-date-sort="1756425600000" data-listing-file-modified-sort="1764664562004" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="301" data-listing-title-sort="Mol/Micro Biology is Merely an Abstraction" data-listing-filename-sort="08-29-25(2).qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="2" data-categories="TWlzYw==" data-listing-date-sort="1756425600000" data-listing-file-modified-sort="1764664841563" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="301" data-listing-title-sort="Mol/Micro Biology is Merely an Abstraction" data-listing-filename-sort="08-29-25(2).qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-08-29</span>
@@ -290,7 +290,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="3" data-categories="TWVkaWNpbmU=" data-listing-date-sort="1758672000000" data-listing-file-modified-sort="1764664562004" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="585" data-listing-title-sort="Diabetic Ketoacidosis and Non-Ketotic Coma" data-listing-filename-sort="diabetic-ketoacidosis.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="3" data-categories="TWVkaWNpbmU=" data-listing-date-sort="1758672000000" data-listing-file-modified-sort="1764664841563" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="585" data-listing-title-sort="Diabetic Ketoacidosis and Non-Ketotic Coma" data-listing-filename-sort="diabetic-ketoacidosis.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-09-24</span>
