--- a/research.html
+++ b/research.html
@@ -162,7 +162,7 @@ window.Quarto = {
   <li class="nav-item">
     <a class="nav-link" href="https://jinsaekiko.substack.com/" target="_blank"> <i class="bi bi-box-arrow-up-right" role="img">
 </i> 
-<span class="menu-text">Substack</span></a>
+<span class="menu-text">Writings</span></a>
   </li>  
 </ul>
           </div> <!-- /navcollapse -->
@@ -248,7 +248,7 @@ Reading Time
 </thead>
 <tbody class="list">
 
-<tr data-index="0" data-listing-date-sort="1755388800000" data-listing-file-modified-sort="1764664562005" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="908" data-listing-title-sort="The Yep Lab: Iron and the Motility of CFT073" data-listing-filename-sort="8-17-2025.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="0" data-listing-date-sort="1755388800000" data-listing-file-modified-sort="1764664841564" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="908" data-listing-title-sort="The Yep Lab: Iron and the Motility of CFT073" data-listing-filename-sort="8-17-2025.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-08-17</span>
@@ -262,7 +262,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="1" data-listing-date-sort="1758412800000" data-listing-file-modified-sort="1764664562005" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="523" data-listing-title-sort="∆waaF and Colanic Acid as a Surfactant" data-listing-filename-sort="9-17-2025.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="1" data-listing-date-sort="1758412800000" data-listing-file-modified-sort="1764664841564" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="523" data-listing-title-sort="∆waaF and Colanic Acid as a Surfactant" data-listing-filename-sort="9-17-2025.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-09-21</span>
@@ -276,7 +276,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="2" data-listing-date-sort="1759449600000" data-listing-file-modified-sort="1764664562007" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="415" data-listing-title-sort="LB, ∆fur, and Stationary Phase" data-listing-filename-sort="stationary-phase.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="2" data-listing-date-sort="1759449600000" data-listing-file-modified-sort="1764664841565" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="415" data-listing-title-sort="LB, ∆fur, and Stationary Phase" data-listing-filename-sort="stationary-phase.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-10-03</span>
@@ -290,7 +290,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="3" data-listing-date-sort="1761523200000" data-listing-file-modified-sort="1764664562006" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="508" data-listing-title-sort="Issues with Biofilm Formation" data-listing-filename-sort="biofilm-issues.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="3" data-listing-date-sort="1761523200000" data-listing-file-modified-sort="1764664841564" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="508" data-listing-title-sort="Issues with Biofilm Formation" data-listing-filename-sort="biofilm-issues.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-10-27</span>
@@ -304,7 +304,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="4" data-listing-date-sort="1762732800000" data-listing-file-modified-sort="1764664562005" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="587" data-listing-title-sort="ASM 2025" data-listing-filename-sort="asm2025.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="4" data-listing-date-sort="1762732800000" data-listing-file-modified-sort="1764664841564" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="587" data-listing-title-sort="ASM 2025" data-listing-filename-sort="asm2025.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-11-10</span>
