deploy: bc7a12fd45355400b3c77abd54806053281a0362

--- a/quotes.html
+++ b/quotes.html
@@ -67,7 +67,7 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
 <link rel="stylesheet" href="mobile.css">
 </head>
 
-<body class="nav-fixed quarto-light">
+<body class="nav-fixed fullcontent quarto-light">
 
 <div id="quarto-search-results"></div>
   <header id="quarto-header" class="headroom fixed-top">
@@ -115,24 +115,7 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
 <div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article page-navbar">
 <!-- sidebar -->
 <!-- margin-sidebar -->
-    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        <nav id="TOC" role="doc-toc" class="toc-active" data-toc-expanded="99">
-    <h2 id="toc-title">Table of Contents</h2>
-   
-  <ul>
-  <li><a href="#fredrik-backman" id="toc-fredrik-backman" class="nav-link active" data-scroll-target="#fredrik-backman">Fredrik Backman</a></li>
-  <li><a href="#osamu-dazai" id="toc-osamu-dazai" class="nav-link" data-scroll-target="#osamu-dazai">Osamu Dazai</a></li>
-  <li><a href="#f.-scott-fitzgerald" id="toc-f.-scott-fitzgerald" class="nav-link" data-scroll-target="#f.-scott-fitzgerald">F. Scott Fitzgerald</a></li>
-  <li><a href="#sarah-kane" id="toc-sarah-kane" class="nav-link" data-scroll-target="#sarah-kane">Sarah Kane</a></li>
-  <li><a href="#haruki-murakami" id="toc-haruki-murakami" class="nav-link" data-scroll-target="#haruki-murakami">Haruki Murakami</a></li>
-  <li><a href="#george-orwell" id="toc-george-orwell" class="nav-link" data-scroll-target="#george-orwell">George Orwell</a></li>
-  <li><a href="#ann-patchett" id="toc-ann-patchett" class="nav-link" data-scroll-target="#ann-patchett">Ann Patchett</a></li>
-  <li><a href="#j.-d.-salinger" id="toc-j.-d.-salinger" class="nav-link" data-scroll-target="#j.-d.-salinger">J. D. Salinger</a></li>
-  <li><a href="#時雨沢-恵一" id="toc-時雨沢-恵一" class="nav-link" data-scroll-target="#時雨沢-恵一">時雨沢 恵一</a></li>
-  <li><a href="#大友克洋" id="toc-大友克洋" class="nav-link" data-scroll-target="#大友克洋">大友克洋</a></li>
-  </ul>
-</nav>
-    </div>
+    
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
