--- a/research/8-17-2025.html
+++ b/research/8-17-2025.html
@@ -88,7 +88,7 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
 <link rel="stylesheet" href="../mobile.css">
 </head>
 
-<body class="nav-fixed quarto-light">
+<body class="nav-fixed fullcontent quarto-light">
 
 <div id="quarto-search-results"></div>
   <header id="quarto-header" class="headroom fixed-top">
@@ -136,30 +136,7 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
 <div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article page-navbar">
 <!-- sidebar -->
 <!-- margin-sidebar -->
-    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        <nav id="TOC" role="doc-toc" class="toc-active" data-toc-expanded="99">
-    <h2 id="toc-title">Table of Contents</h2>
-   
-  <ul>
-  <li><a href="#preface" id="toc-preface" class="nav-link active" data-scroll-target="#preface">Preface</a></li>
-  <li><a href="#iron-and-motility" id="toc-iron-and-motility" class="nav-link" data-scroll-target="#iron-and-motility">Iron and Motility</a>
-  <ul class="collapse">
-  <li><a href="#introduction-to-infection-and-motility" id="toc-introduction-to-infection-and-motility" class="nav-link" data-scroll-target="#introduction-to-infection-and-motility">Introduction to Infection and Motility</a></li>
-  <li><a href="#purpose-of-project" id="toc-purpose-of-project" class="nav-link" data-scroll-target="#purpose-of-project">Purpose of Project</a></li>
-  <li><a href="#why-do-we-study-iron" id="toc-why-do-we-study-iron" class="nav-link" data-scroll-target="#why-do-we-study-iron">Why do we study Iron?</a>
-  <ul class="collapse">
-  <li><a href="#why-not-explore-other-nutrients" id="toc-why-not-explore-other-nutrients" class="nav-link" data-scroll-target="#why-not-explore-other-nutrients">Why not explore other nutrients?</a></li>
-  </ul></li>
-  <li><a href="#modes-of-motility-expressed-by-cft073" id="toc-modes-of-motility-expressed-by-cft073" class="nav-link" data-scroll-target="#modes-of-motility-expressed-by-cft073">Modes of Motility Expressed by CFT073</a>
-  <ul class="collapse">
-  <li><a href="#swimming" id="toc-swimming" class="nav-link" data-scroll-target="#swimming">Swimming</a></li>
-  <li><a href="#swarming" id="toc-swarming" class="nav-link" data-scroll-target="#swarming">Swarming</a></li>
-  <li><a href="#biofilm-formation" id="toc-biofilm-formation" class="nav-link" data-scroll-target="#biofilm-formation">Biofilm Formation</a></li>
-  </ul></li>
-  </ul></li>
-  </ul>
-</nav>
-    </div>
+    
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
