--- a/research/biofilm-issues.html
+++ b/research/biofilm-issues.html
@@ -88,7 +88,7 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
 <link rel="stylesheet" href="../mobile.css">
 </head>
 
-<body class="nav-fixed quarto-light">
+<body class="nav-fixed fullcontent quarto-light">
 
 <div id="quarto-search-results"></div>
   <header id="quarto-header" class="headroom fixed-top">
@@ -136,20 +136,7 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
 <div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article page-navbar">
 <!-- sidebar -->
 <!-- margin-sidebar -->
-    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        <nav id="TOC" role="doc-toc" class="toc-active" data-toc-expanded="99">
-    <h2 id="toc-title">Table of Contents</h2>
-   
-  <ul>
-  <li><a href="#the-canonical-biofilm-assay-protocol" id="toc-the-canonical-biofilm-assay-protocol" class="nav-link active" data-scroll-target="#the-canonical-biofilm-assay-protocol">The Canonical Biofilm Assay Protocol</a></li>
-  <li><a href="#potential-errors-in-protocol" id="toc-potential-errors-in-protocol" class="nav-link" data-scroll-target="#potential-errors-in-protocol">Potential Errors in Protocol</a>
-  <ul class="collapse">
-  <li><a href="#washing-and-rinsing" id="toc-washing-and-rinsing" class="nav-link" data-scroll-target="#washing-and-rinsing">Washing and Rinsing</a></li>
-  <li><a href="#well-plate" id="toc-well-plate" class="nav-link" data-scroll-target="#well-plate">96-well-plate</a></li>
-  </ul></li>
-  </ul>
-</nav>
-    </div>
+    
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
