--- a/books.html
+++ b/books.html
@@ -67,7 +67,7 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
 <link rel="stylesheet" href="mobile.css">
 </head>
 
-<body class="nav-fixed quarto-light">
+<body class="nav-fixed fullcontent quarto-light">
 
 <div id="quarto-search-results"></div>
   <header id="quarto-header" class="headroom fixed-top">
@@ -115,16 +115,7 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
 <div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article page-navbar">
 <!-- sidebar -->
 <!-- margin-sidebar -->
-    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        <nav id="TOC" role="doc-toc" class="toc-active" data-toc-expanded="99">
-    <h2 id="toc-title">Table of Contents</h2>
-   
-  <ul>
-  <li><a href="#nonfiction" id="toc-nonfiction" class="nav-link active" data-scroll-target="#nonfiction">Nonfiction</a></li>
-  <li><a href="#fiction" id="toc-fiction" class="nav-link" data-scroll-target="#fiction">Fiction</a></li>
-  </ul>
-</nav>
-    </div>
+    
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
