--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
 <link rel="stylesheet" href="mobile.css">
 </head>
 
-<body class="nav-fixed quarto-light">
+<body class="nav-fixed fullcontent quarto-light">
 
 <div id="quarto-search-results"></div>
   <header id="quarto-header" class="headroom fixed-top">
@@ -115,9 +115,7 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
 <div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article page-navbar">
 <!-- sidebar -->
 <!-- margin-sidebar -->
-    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar zindex-bottom">
-        
-    </div>
+    
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
