--- a/research/9-17-2025.html
+++ b/research/9-17-2025.html
@@ -88,7 +88,7 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
 <link rel="stylesheet" href="../mobile.css">
 </head>
 
-<body class="nav-fixed quarto-light">
+<body class="nav-fixed fullcontent quarto-light">
 
 <div id="quarto-search-results"></div>
   <header id="quarto-header" class="headroom fixed-top">
@@ -136,23 +136,7 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
 <div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article page-navbar">
 <!-- sidebar -->
 <!-- margin-sidebar -->
-    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        <nav id="TOC" role="doc-toc" class="toc-active" data-toc-expanded="99">
-    <h2 id="toc-title">Table of Contents</h2>
-   
-  <ul>
-  <li><a href="#what-is-colanic-acid" id="toc-what-is-colanic-acid" class="nav-link active" data-scroll-target="#what-is-colanic-acid">What is Colanic Acid</a></li>
-  <li><a href="#e.-coli-and-ca-as-a-surfactant" id="toc-e.-coli-and-ca-as-a-surfactant" class="nav-link" data-scroll-target="#e.-coli-and-ca-as-a-surfactant"><em>E. coli</em> and CA as a Surfactant</a></li>
-  <li><a href="#ca-and-swarming" id="toc-ca-and-swarming" class="nav-link" data-scroll-target="#ca-and-swarming">CA and Swarming</a></li>
-  <li><a href="#methods-of-extracellular-supplementation-of-ca" id="toc-methods-of-extracellular-supplementation-of-ca" class="nav-link" data-scroll-target="#methods-of-extracellular-supplementation-of-ca">Methods of Extracellular Supplementation of CA</a>
-  <ul class="collapse">
-  <li><a href="#purification" id="toc-purification" class="nav-link" data-scroll-target="#purification">Purification</a></li>
-  <li><a href="#quantification" id="toc-quantification" class="nav-link" data-scroll-target="#quantification">Quantification</a></li>
-  <li><a href="#supplementation" id="toc-supplementation" class="nav-link" data-scroll-target="#supplementation">Supplementation</a></li>
-  </ul></li>
-  </ul>
-</nav>
-    </div>
+    
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
