--- a/research/stationary-phase.html
+++ b/research/stationary-phase.html
@@ -88,7 +88,7 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
 <link rel="stylesheet" href="../mobile.css">
 </head>
 
-<body class="nav-fixed quarto-light">
+<body class="nav-fixed fullcontent quarto-light">
 
 <div id="quarto-search-results"></div>
   <header id="quarto-header" class="headroom fixed-top">
@@ -136,17 +136,7 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
 <div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article page-navbar">
 <!-- sidebar -->
 <!-- margin-sidebar -->
-    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        <nav id="TOC" role="doc-toc" class="toc-active" data-toc-expanded="99">
-    <h2 id="toc-title">Table of Contents</h2>
-   
-  <ul>
-  <li><a href="#ros-damage" id="toc-ros-damage" class="nav-link active" data-scroll-target="#ros-damage">ROS Damage</a></li>
-  <li><a href="#ph-threshold" id="toc-ph-threshold" class="nav-link" data-scroll-target="#ph-threshold">pH Threshold</a></li>
-  <li><a href="#carbon-exhaustion" id="toc-carbon-exhaustion" class="nav-link" data-scroll-target="#carbon-exhaustion">Carbon Exhaustion</a></li>
-  </ul>
-</nav>
-    </div>
+    
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
