deploy: f731da6dc3d19035bb14354f2c805c2e72e84d28

--- a/books.html
+++ b/books.html
@@ -154,6 +154,7 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
 <section id="fiction" class="level1">
 <h1>Fiction</h1>
 <p>A Man Called Ove, <em>Fredrik Backman</em></p>
+<p>The Remains of the Day, <em>Kazuo Ishiguro</em></p>
 <p>The Ones Who Walk Away from Omelas, <em>Ursula K. Le Guin</em></p>
 <p>1Q84, <em>Haruki Murakami</em></p>
 <p>Colorless Tsukuru Tazaki and His Years of Pilgrimage, <em>Haruki Murakami</em></p>
