--- a/quotes.html
+++ b/quotes.html
@@ -150,7 +150,7 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
 <section id="osamu-dazai" class="level3">
 <h3 class="anchored" data-anchor-id="osamu-dazai">Osamu Dazai</h3>
 <blockquote class="blockquote">
-<p>To wait. In our lives we know joy, anger, sorrow, and a hundred other emotions, but these emotions all together occupy a bare one per cent of our time. The remaining ninety-nine per cent is just living in waiting. I wait in momentary expectation, feeling as though my breasts are being crushed, for the sound in the corridor of the footsteps of happiness. Empty.</p>
+<p>To wait. In our lives we know joy, anger, sorrow, and a hundred other emotions, but these emotions all together occupy a bare one per cent of our time. The remaining ninety-nine per cent is just living in waiting. I wait in momentary expectation, feeling as though my breasts are being crushed, for the sound in the corridor of the footsteps of happiness. Empty.　Oh, life is too painful, the reality that confirms the universal belief that it is best not to be born.</p>
 </blockquote>
 <blockquote class="blockquote">
 <p>As long as you love me, all I want is to spend my whole life by your side.</p>
@@ -163,6 +163,12 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
 </blockquote>
 <blockquote class="blockquote">
 <p>Let us learn to show our friendship for a man when he is alive and not after he is dead.</p>
+</blockquote>
+</section>
+<section id="kazuo-ishiguro" class="level3">
+<h3 class="anchored" data-anchor-id="kazuo-ishiguro">Kazuo Ishiguro</h3>
+<blockquote class="blockquote">
+<p>There was surely nothing to indicate at the time that such evidently small incidents would render whole dreams forever irredeemable.</p>
 </blockquote>
 </section>
 <section id="sarah-kane" class="level3">
