deploy: 7f76322a7ba716b6e10ac1ba798f0236d66313a2

--- a/quotes.html
+++ b/quotes.html
@@ -147,6 +147,12 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
 <p>She just smiled, said that she loved books more than anything, and started telling him excitedly what each of the ones in her lap was about. And Ove realised that he wanted to hear her talking about the things she loved for the rest of his life.</p>
 </blockquote>
 </section>
+<section id="anton-chekhov" class="level3">
+<h3 class="anchored" data-anchor-id="anton-chekhov">Anton Chekhov</h3>
+<blockquote class="blockquote">
+<p>I realized that when you love someone, your reasoning about that love should be based on what is supreme, on what is more important than happiness or unhappiness, sin or virtue, in the way that they are usually understood, otherwise it is not worth reasoning at all.</p>
+</blockquote>
+</section>
 <section id="osamu-dazai" class="level3">
 <h3 class="anchored" data-anchor-id="osamu-dazai">Osamu Dazai</h3>
 <blockquote class="blockquote">
