--- a/blog.html
+++ b/blog.html
@@ -176,7 +176,7 @@ window.Quarto = {
 <!-- sidebar -->
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(7)</span></div><div class="category" data-category="QmlvbG9neQ==">Biology <span class="quarto-category-count">(2)</span></div><div class="category" data-category="Q1M=">CS <span class="quarto-category-count">(1)</span></div><div class="category" data-category="TWVkaWNpbmU=">Medicine <span class="quarto-category-count">(3)</span></div><div class="category" data-category="TWlzYw==">Misc <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(6)</span></div><div class="category" data-category="QmlvbG9neQ==">Biology <span class="quarto-category-count">(2)</span></div><div class="category" data-category="Q1M=">CS <span class="quarto-category-count">(1)</span></div><div class="category" data-category="TWVkaWNpbmU=">Medicine <span class="quarto-category-count">(3)</span></div></div></div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
@@ -247,7 +247,7 @@ Reading Time
 </thead>
 <tbody class="list">
 
-<tr data-index="0" data-categories="Q1M=" data-listing-date-sort="1755734400000" data-listing-file-modified-sort="1767174288231" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="317" data-listing-title-sort="How this Website was Made" data-listing-filename-sort="blog_post.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="0" data-categories="Q1M=" data-listing-date-sort="1755734400000" data-listing-file-modified-sort="1767319938590" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="317" data-listing-title-sort="How this Website was Made" data-listing-filename-sort="blog_post.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-08-21</span>
@@ -261,7 +261,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="1" data-categories="QmlvbG9neQ==" data-listing-date-sort="1756425600000" data-listing-file-modified-sort="1767174288231" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="911" data-listing-title-sort="Overview Of Sequencing" data-listing-filename-sort="08-29-25.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="1" data-categories="QmlvbG9neQ==" data-listing-date-sort="1756425600000" data-listing-file-modified-sort="1767319938590" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="911" data-listing-title-sort="Overview Of Sequencing" data-listing-filename-sort="08-29-25.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-08-29</span>
@@ -275,21 +275,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="2" data-categories="TWlzYw==" data-listing-date-sort="1756425600000" data-listing-file-modified-sort="1767174288231" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="301" data-listing-title-sort="Mol/Micro Biology is Merely an Abstraction" data-listing-filename-sort="08-29-25(2).qmd" onclick="href = this.querySelector('a').getAttribute('href');
- if (href) { window.location=href ; return false; }">
-<td>
-<span class="listing-date">2025-08-29</span>
-</td>
-<td>
-<a href="./blog/08-29-25(2).html" class="title listing-title">Mol/Micro Biology is Merely an Abstraction</a>
-</td>
-<td>
-<span class="listing-reading-time">2 min</span>
-</td>
-
-</tr>
-
-<tr data-index="3" data-categories="TWVkaWNpbmU=" data-listing-date-sort="1758672000000" data-listing-file-modified-sort="1767174288231" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="585" data-listing-title-sort="Diabetic Ketoacidosis and Non-Ketotic Coma" data-listing-filename-sort="diabetic-ketoacidosis.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="2" data-categories="TWVkaWNpbmU=" data-listing-date-sort="1758672000000" data-listing-file-modified-sort="1767319938590" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="585" data-listing-title-sort="Diabetic Ketoacidosis and Non-Ketotic Coma" data-listing-filename-sort="diabetic-ketoacidosis.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-09-24</span>
@@ -303,7 +289,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="4" data-categories="TWVkaWNpbmU=" data-listing-date-sort="1765411200000" data-listing-file-modified-sort="1767174288231" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="975" data-listing-title-sort="Lecanemab in Early Alzheimer’s Disease" data-listing-filename-sort="AD_paper.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="3" data-categories="TWVkaWNpbmU=" data-listing-date-sort="1765411200000" data-listing-file-modified-sort="1767319938590" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="975" data-listing-title-sort="Lecanemab in Early Alzheimer’s Disease" data-listing-filename-sort="AD_paper.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-12-11</span>
@@ -317,7 +303,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="5" data-categories="QmlvbG9neQ==" data-listing-date-sort="1766102400000" data-listing-file-modified-sort="1767174288231" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4" data-listing-word-count-sort="693" data-listing-title-sort="Interbacterial Antagonism via Secretion Systems and its Applications" data-listing-filename-sort="sec_systems.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="4" data-categories="QmlvbG9neQ==" data-listing-date-sort="1766102400000" data-listing-file-modified-sort="1767319938590" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4" data-listing-word-count-sort="693" data-listing-title-sort="Interbacterial Antagonism via Secretion Systems and its Applications" data-listing-filename-sort="sec_systems.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-12-19</span>
@@ -331,7 +317,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="6" data-categories="TWVkaWNpbmU=" data-listing-date-sort="1766275200000" data-listing-file-modified-sort="1767174288231" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8" data-listing-word-count-sort="1569" data-listing-title-sort="SPICES Model of Medical Education" data-listing-filename-sort="spices.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="5" data-categories="TWVkaWNpbmU=" data-listing-date-sort="1766275200000" data-listing-file-modified-sort="1767319938591" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8" data-listing-word-count-sort="1569" data-listing-title-sort="SPICES Model of Medical Education" data-listing-filename-sort="spices.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-12-21</span>
