--- a/index.html
+++ b/index.html
@@ -124,11 +124,9 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>Hi, my name is Jin. I’m an undergraduate studying Microbiology at <a href="https://en.wikipedia.org/wiki/California_Polytechnic_State_University,_San_Luis_Obispo">California Polytechnic State University, San Luis Obispo</a>.</p>
-<p>I’m largely interested in pathogenesis, mutualistic host-microbe relationships, and anything medicine related, but I also do some computer science (nominally) in the lab. Learn more in the <a href="./research.html">research section</a>.</p>
+<p>I’m an undergraduate studying Microbiology at <a href="https://en.wikipedia.org/wiki/California_Polytechnic_State_University,_San_Luis_Obispo">California Polytechnic State University, San Luis Obispo</a>.</p>
+<p>I’m enjoy learning about pathogenesis, mutualistic host-microbe relationships, and anything medicine related, but I also do some computer science (nominally) in the lab. Learn more in the <a href="./research.html">research section</a>.</p>
 <p>The <a href="./blog.html">blog section</a> is simply a place where I learn about whatever I want.</p>
-<p>In any case, this website should primarily serve as my central hub for thinking, a way to learn via soliloquy. Since this is on the internet, I’m also obligated to post accurate information which should aid my learning.</p>
-<p>You can contact me via email here: <a href="mailto:jko23@calpoly.edu">jko23@calpoly.edu</a>.</p>
 
 
 
