--- a/quotes.html
+++ b/quotes.html
@@ -199,6 +199,15 @@ ul.task-list li input[type="checkbox"] {
 <p>Only a few of us are going to be willing to break our own hearts by trading in the living beauty of imagination for the stark disappointment of words.</p>
 </blockquote>
 </section>
+<section id="antoine-de-saint-exupéry" class="level3">
+<h3 class="anchored" data-anchor-id="antoine-de-saint-exupéry">Antoine de Saint-Exupéry</h3>
+<blockquote class="blockquote">
+<p>It is such a secret place, the land of tears.</p>
+</blockquote>
+<blockquote class="blockquote">
+<p>To me, you are still nothing more than a little boy who is just like a hundred thousand other little boys. And I have no need of you. And you, on your part, have no need of me. To you I am nothing more than a fox like a hundred thousand other foxes. But if you tame me, then we shall need each other. To me, you will be unique in all the world. To you, I shall be unique in all the world.</p>
+</blockquote>
+</section>
 <section id="j.-d.-salinger" class="level3">
 <h3 class="anchored" data-anchor-id="j.-d.-salinger">J. D. Salinger</h3>
 <blockquote class="blockquote">
