deploy: b9db27b0b4a05422f38ee7212d843026effd2257

--- a/blog.html
+++ b/blog.html
@@ -150,6 +150,10 @@ window.Quarto = {
     <a class="nav-link" href="./books.html"> 
 <span class="menu-text">Books</span></a>
   </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="https://writing.jinsko.com/"> 
+<span class="menu-text">Writing</span></a>
+  </li>  
 </ul>
           </div> <!-- /navcollapse -->
             <div class="quarto-navbar-tools">
@@ -233,7 +237,7 @@ Reading Time
 </thead>
 <tbody class="list">
 
-<tr data-index="0" data-categories="Q1M=" data-listing-date-sort="1755734400000" data-listing-file-modified-sort="1770158121879" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="317" data-listing-title-sort="How this Website was Made" data-listing-filename-sort="blog_post.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="0" data-categories="Q1M=" data-listing-date-sort="1755734400000" data-listing-file-modified-sort="1770187719985" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="317" data-listing-title-sort="How this Website was Made" data-listing-filename-sort="blog_post.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-08-21</span>
@@ -247,7 +251,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="1" data-categories="QmlvbG9neQ==" data-listing-date-sort="1756425600000" data-listing-file-modified-sort="1770158121879" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="911" data-listing-title-sort="Overview Of Sequencing" data-listing-filename-sort="08-29-25.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="1" data-categories="QmlvbG9neQ==" data-listing-date-sort="1756425600000" data-listing-file-modified-sort="1770187719985" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="911" data-listing-title-sort="Overview Of Sequencing" data-listing-filename-sort="08-29-25.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-08-29</span>
@@ -261,7 +265,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="2" data-categories="TWVkaWNpbmU=" data-listing-date-sort="1758672000000" data-listing-file-modified-sort="1770158121880" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="585" data-listing-title-sort="Diabetic Ketoacidosis and Non-Ketotic Coma" data-listing-filename-sort="diabetic-ketoacidosis.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="2" data-categories="TWVkaWNpbmU=" data-listing-date-sort="1758672000000" data-listing-file-modified-sort="1770187719985" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="585" data-listing-title-sort="Diabetic Ketoacidosis and Non-Ketotic Coma" data-listing-filename-sort="diabetic-ketoacidosis.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-09-24</span>
@@ -275,7 +279,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="3" data-categories="QmlvbG9neQ==" data-listing-date-sort="1766102400000" data-listing-file-modified-sort="1770158121880" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4" data-listing-word-count-sort="693" data-listing-title-sort="Interbacterial Antagonism via Secretion Systems and its Applications" data-listing-filename-sort="sec_systems.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="3" data-categories="QmlvbG9neQ==" data-listing-date-sort="1766102400000" data-listing-file-modified-sort="1770187719985" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4" data-listing-word-count-sort="693" data-listing-title-sort="Interbacterial Antagonism via Secretion Systems and its Applications" data-listing-filename-sort="sec_systems.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-12-19</span>
@@ -289,7 +293,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="4" data-categories="TWVkaWNpbmU=" data-listing-date-sort="1766275200000" data-listing-file-modified-sort="1770158121880" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8" data-listing-word-count-sort="1536" data-listing-title-sort="SPICES Model of Medical Education" data-listing-filename-sort="spices.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="4" data-categories="TWVkaWNpbmU=" data-listing-date-sort="1766275200000" data-listing-file-modified-sort="1770187719986" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8" data-listing-word-count-sort="1536" data-listing-title-sort="SPICES Model of Medical Education" data-listing-filename-sort="spices.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-12-21</span>
