--- a/quotes.html
+++ b/quotes.html
@@ -137,6 +137,12 @@ ul.task-list li input[type="checkbox"] {
 <p>She just smiled, said that she loved books more than anything, and started telling him excitedly what each of the ones in her lap was about. And Ove realised that he wanted to hear her talking about the things she loved for the rest of his life.</p>
 </blockquote>
 </section>
+<section id="james-baldwin" class="level3">
+<h3 class="anchored" data-anchor-id="james-baldwin">James Baldwin</h3>
+<blockquote class="blockquote">
+<p>Love has never been a popular movement. And no one’s ever wanted, really, to be free. The world is held together, really it is held together, by the love and the passion of a very few people. Otherwise, of course, you can despair. Walk down the street of any city, any afternoon, and look around you. What you’ve got to remember is what you’re looking at is also you. Everyone you’re looking at is also you. You could be that person. You could be that monster, you could be that cop. And you have to decide, in yourself, not to be.</p>
+</blockquote>
+</section>
 <section id="anton-chekhov" class="level3">
 <h3 class="anchored" data-anchor-id="anton-chekhov">Anton Chekhov</h3>
 <blockquote class="blockquote">
@@ -147,9 +153,6 @@ ul.task-list li input[type="checkbox"] {
 <h3 class="anchored" data-anchor-id="osamu-dazai">Osamu Dazai</h3>
 <blockquote class="blockquote">
 <p>To wait. In our lives we know joy, anger, sorrow, and a hundred other emotions, but these emotions all together occupy a bare one per cent of our time. The remaining ninety-nine per cent is just living in waiting. I wait in momentary expectation, feeling as though my breasts are being crushed, for the sound in the corridor of the footsteps of happiness. Empty. Oh, life is too painful, the reality that confirms the universal belief that it is best not to be born.</p>
-</blockquote>
-<blockquote class="blockquote">
-<p>As long as you love me, all I want is to spend my whole life by your side.</p>
 </blockquote>
 </section>
 <section id="f.-scott-fitzgerald" class="level3">
@@ -216,11 +219,6 @@ ul.task-list li input[type="checkbox"] {
 <h3 class="anchored" data-anchor-id="j.-d.-salinger">J. D. Salinger</h3>
 <blockquote class="blockquote">
 <p>Many, many men have been just as troubled morally and spiritually as you are right now. Happily, some of them kept records of their troubles. You’ll learn from them—if you want to. Just as someday, if you have something to offer, someone will learn something from you. It’s a beautiful reciprocal arrangement. And it isn’t education. It’s history. It’s poetry. I’m not trying to tell you that only educated and scholarly men are able to contribute something valuable to the world. It’s not so. But I do say that educated and scholarly men, if they’re brilliant and creative to begin with—which, unfortunately, is rarely the case—tend to leave infinitely more valuable records behind them than men do who are merely brilliant and creative. They tend to express themselves more clearly, and they usually have a passion for following their thoughts through to the end.</p>
-</blockquote>
-<blockquote class="blockquote">
-<p>“Anyway, I like it now,” I said. “I mean right now. Sitting here with you and just chewing the fat and horsing—”<br>
-“That isn’t anything really!”<br>
-“It is so something really! Certainly it is! Why the hell isn’t it? People never think anything is anything really. I’m getting goddam sick of it.”</p>
 </blockquote>
 </section>
 <section id="時雨沢-恵一" class="level3">
